--- a/detail.html
+++ b/detail.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>雲端課堂|影片資訊</title>
+    <link rel="stylesheet" href="Css/detail.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" href="detail.css">
+    
 </head>
 <body>
 <div class="big">
     <iframe width="965" height="543" src="https://www.youtube.com/embed/iTW1bv2eO9Y" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <span>
+        <p>  我們不得不面對一個非常尷尬的事實，那就是，廢話勢必能夠左右未來。廢話的發生，到底需要如何實現，不廢話的發生，又會如何產生。</p>
+    </span>
 </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
