--- a/detail.html
+++ b/detail.html
@@ -12,7 +12,9 @@
 <div class="big">
     <iframe width="965" height="543" src="https://www.youtube.com/embed/iTW1bv2eO9Y" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <span>
-        <p>  我們不得不面對一個非常尷尬的事實，那就是，廢話勢必能夠左右未來。廢話的發生，到底需要如何實現，不廢話的發生，又會如何產生。</p>
+        <p>          這樣看來，如果仔細思考廢話，會發現其中蘊含的深遠意義。
+
+            艾迪生曾經說過，愛情不會因為理智而變得淡漠，也不會因為雄心壯志而喪失殆盡。它是第二生命; 它滲入靈魂，溫暖著每一條血管，跳動在每一次脈搏之中。這段話的餘韻不斷在我腦海中迴盪著。</p>
     </span>
 </div>
 
