--- a/index.html
+++ b/index.html
@@ -20,22 +20,22 @@
         <div class="select1">
             <div class="stext">科技類</div>
             <div class="Options corner">
-                <div class="Otext ">領導管理/危機管理</div>
-                <div class="Otext">時間管理/ 高效工作/ 項目管理/ 危機管理</div>
-                <div class="Otext">邏輯思維/ 思維導圖/ 目標管理/ 績效管理</div>
-                <div class="Otext">溝通/ 談判/ 有效會議</div>
-                <div class="Otext">轉型變革</div>
+                <div class="Otext radiustop">&ensp;領導管理/危機管理</div>
+                <div class="Otext"> &ensp;時間管理/ 高效工作/ 項目管理/ 危機管理</div>
+                <div class="Otext"> &ensp;邏輯思維/ 思維導圖/ 目標管理/ 績效管理</div>
+                <div class="Otext"> &ensp;溝通/ 談判/ 有效會議</div>
+                <div class="Otext radiusbottom"> &ensp;轉型變革</div>
                 </div>
                 
         </div>
         <div class="select2">
             <div class="stext">管理類</div>
             <div class="Options2 corner">
-                <div class="Otext">工業互聯網類</div>
-                <div class="Otext">人工智能類</div>
-                <div class="Otext">5G+物聯網類</div>
-                <div class="Otext">大數據/雲計算類</div>
-                <div class="Otext">AR/VR/MR類</div>
+                <div class="Otext radiustop"> &ensp;工業互聯網類</div>
+                <div class="Otext"> &ensp;人工智能類</div>
+                <div class="Otext">&ensp; 5G+物聯網類</div>
+                <div class="Otext">&ensp; 大數據/雲計算類</div>
+                <div class="Otext radiusbottom">&ensp; AR/VR/MR類</div>
             </div>
                 
         </div>
