--- a/list.html
+++ b/list.html
@@ -78,7 +78,7 @@
                 </li>
             </ul>
         </div>
-        <div class="tab-wrap">
+        <div class="Right_Content">
 
             <input type="radio" id="tab1" name="tabGroup1" class="tab" checked>
             <label for="tab1">基礎簡介</label>
