--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                     <div class="cimage">
                         <div id="container"></div>
                         <div style="display:none"></div>
-                        <div class="ele">WELCOM</div>
-                        <div class="ele">B次雲端課堂</div>
+                        <div style="display:none" class="ele">WELCOM</div>
+                        <div style="display:none"class="ele">B次雲端課堂</div>
                     </div>
                 </div>
                 <div class="slide-2" ><img src="1.jpg" class="cimage"></div>
