--- a/detail.html
+++ b/detail.html
@@ -14,6 +14,16 @@
     <span>
         <p>這樣看來，如果仔細思考廢話，會發現其中蘊含的深遠意義。艾迪生曾經說過，愛情不會因為理智而變得淡漠，也不會因為雄心壯志而喪失殆盡。它是第二生命; 它滲入靈魂，溫暖著每一條血管，跳動在每一次脈搏之中。這段話的餘韻不斷在我腦海中迴盪著。</p>
     </span>
+    <div class="video">
+        <ol>
+            <li><iframe width="300" height="100" src="https://www.youtube.com/embed/TUaHvhy4ZMI?list=RDBCn81_zmNa8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
+            <li><iframe width="300" height="100" src="https://www.youtube.com/embed/TUaHvhy4ZMI?list=RDBCn81_zmNa8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
+            <li><iframe width="300" height="100" src="https://www.youtube.com/embed/TUaHvhy4ZMI?list=RDBCn81_zmNa8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
+            <li><iframe width="300" height="100" src="https://www.youtube.com/embed/TUaHvhy4ZMI?list=RDBCn81_zmNa8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
+            <li><iframe width="300" height="100" src="https://www.youtube.com/embed/TUaHvhy4ZMI?list=RDBCn81_zmNa8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
+        </ol>
+    </div>
+    
 </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
