--- a/detail.html
+++ b/detail.html
@@ -9,7 +9,19 @@
     
 </head>
 <body>
-<div class="big">
+    <div class="Web_Header">
+        <div class="navba">
+            <p class="title">B次雲端課堂</p>
+
+            <div class="search">
+                <input id="text" class="sbox">
+                <button type="button" type="button" value="Enter" class="sbutton" onclick="showButtonEvent()"><i
+                        class="fas fa-search"></i></button>
+            </div>
+
+        </div>
+    </div>
+    <div class="big">
     <iframe width="965" height="543" src="https://www.youtube.com/embed/iTW1bv2eO9Y" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <span>
         <p>這樣看來，如果仔細思考廢話，會發現其中蘊含的深遠意義。艾迪生曾經說過，愛情不會因為理智而變得淡漠，也不會因為雄心壯志而喪失殆盡。它是第二生命; 它滲入靈魂，溫暖著每一條血管，跳動在每一次脈搏之中。這段話的餘韻不斷在我腦海中迴盪著。</p>
@@ -22,6 +34,14 @@
             <li><iframe width="300" height="100" src="https://www.youtube.com/embed/TUaHvhy4ZMI?list=RDBCn81_zmNa8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
             <li><iframe width="300" height="100" src="https://www.youtube.com/embed/TUaHvhy4ZMI?list=RDBCn81_zmNa8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
         </ol>
+    </div>
+    <div class="Web_footer">
+        <footer class="footer">
+            <div class="footertext">
+                <p>Copyright © 2020 inline Ltd. All Rights Reserved</p>
+                <p>Terms of Use/Privacy PolicyPowered by inlineVersion 7.25.1</p>
+            </div>
+        </footer>
     </div>
     
 </div>
