--- a/detail.html
+++ b/detail.html
@@ -22,19 +22,49 @@
         </div>
     </div>
     <div class="big">
-    <iframe width="965" height="543" src="https://www.youtube.com/embed/iTW1bv2eO9Y" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <span>
-        <p>這樣看來，如果仔細思考廢話，會發現其中蘊含的深遠意義。艾迪生曾經說過，愛情不會因為理智而變得淡漠，也不會因為雄心壯志而喪失殆盡。它是第二生命; 它滲入靈魂，溫暖著每一條血管，跳動在每一次脈搏之中。這段話的餘韻不斷在我腦海中迴盪著。</p>
-    </span>
-    <div class="video">
-        <ol>
-            <li><iframe width="300" height="100" src="https://www.youtube.com/embed/TUaHvhy4ZMI?list=RDBCn81_zmNa8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-            <li><iframe width="300" height="100" src="https://www.youtube.com/embed/TUaHvhy4ZMI?list=RDBCn81_zmNa8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-            <li><iframe width="300" height="100" src="https://www.youtube.com/embed/TUaHvhy4ZMI?list=RDBCn81_zmNa8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-            <li><iframe width="300" height="100" src="https://www.youtube.com/embed/TUaHvhy4ZMI?list=RDBCn81_zmNa8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-            <li><iframe width="300" height="100" src="https://www.youtube.com/embed/TUaHvhy4ZMI?list=RDBCn81_zmNa8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-        </ol>
-    </div>
+        <div class="up">
+            <div class="play">
+                <iframe width="100%" height="543" src="https://www.youtube.com/embed/iTW1bv2eO9Y" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen>
+                </iframe>
+            </div>
+            <div class="word">
+                <span>
+                    <p>這樣看來，如果仔細思考廢話，會發現其中蘊含的深遠意義。艾迪生曾經說過，愛情不會因為理智而變得淡漠，也不會因為雄心壯志而喪失殆盡。它是第二生命;
+                        它滲入靈魂，溫暖著每一條血管，跳動在每一次脈搏之中。這段話的餘韻不斷在我腦海中迴盪著。</p>
+                </span>
+            </div>
+
+        </div>
+
+        <div class="down">
+            <div class="video">
+                <ol>
+                    <li><iframe width="300" height="100"
+                            src="https://www.youtube.com/embed/TUaHvhy4ZMI?list=RDBCn81_zmNa8" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe></li>
+                    <li><iframe width="300" height="100"
+                            src="https://www.youtube.com/embed/TUaHvhy4ZMI?list=RDBCn81_zmNa8" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe></li>
+                    <li><iframe width="300" height="100"
+                            src="https://www.youtube.com/embed/TUaHvhy4ZMI?list=RDBCn81_zmNa8" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe></li>
+                    <li><iframe width="300" height="100"
+                            src="https://www.youtube.com/embed/TUaHvhy4ZMI?list=RDBCn81_zmNa8" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe></li>
+                    <li><iframe width="300" height="100"
+                            src="https://www.youtube.com/embed/TUaHvhy4ZMI?list=RDBCn81_zmNa8" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe></li>
+                </ol>
+            </div>
+
+        </div>
     <div class="Web_footer">
         <footer class="footer">
             <div class="footertext">
