--- a/detail.html
+++ b/detail.html
@@ -24,10 +24,7 @@
     <div class="big">
         <div class="up">
             <div class="play">
-                <iframe width="100%" height="543" src="https://www.youtube.com/embed/iTW1bv2eO9Y" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen>
-                </iframe>
+                <iframe width="100%" height="543" src="https://www.youtube.com/embed/kWYVdcvDArc?list=RDBCn81_zmNa8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div class="word">
                 <span>
