--- a/detail.html
+++ b/detail.html
@@ -36,28 +36,13 @@
         </div>
 
         <div class="down">
-            <div class="video">
+            <div class="img">
                 <ol>
-                    <li><iframe width="300" height="100"
-                            src="https://www.youtube.com/embed/TUaHvhy4ZMI?list=RDBCn81_zmNa8" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe></li>
-                    <li><iframe width="300" height="100"
-                            src="https://www.youtube.com/embed/TUaHvhy4ZMI?list=RDBCn81_zmNa8" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe></li>
-                    <li><iframe width="300" height="100"
-                            src="https://www.youtube.com/embed/TUaHvhy4ZMI?list=RDBCn81_zmNa8" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe></li>
-                    <li><iframe width="300" height="100"
-                            src="https://www.youtube.com/embed/TUaHvhy4ZMI?list=RDBCn81_zmNa8" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe></li>
-                    <li><iframe width="300" height="100"
-                            src="https://www.youtube.com/embed/TUaHvhy4ZMI?list=RDBCn81_zmNa8" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe></li>
+                    <div class="img1"><li><img src="2.jpg" alt=""></li></div>
+                    <div class="img2"><li><img src="2.jpg" alt=""></li></div>
+                    <div class="img3"><li><img src="2.jpg" alt=""></li></div>
+                    <div class="img4"><li><img src="2.jpg" alt=""></li></div>
+                    <div class="img5"><li><img src="2.jpg" alt=""></li></div>
                 </ol>
             </div>
 
