--- a/list.html
+++ b/list.html
@@ -47,36 +47,7 @@
                         <a class="submenu-item">AR/VR/MR類</a>
                     </div>
                 </li>
-                <li class="itembox drop-down">
-                    <a class="item" href="#">課件三</a>
-                    <div class="submenu">
-                        <a class="submenu-item">主題一</a>
-                        <a class="submenu-item">主題二</a>
-                        <a class="submenu-item">主題三</a>
-                        <a class="submenu-item">主題四</a>
-                        <a class="submenu-item">主題五</a>
-                    </div>
-                </li>
-                <li class="itembox drop-down">
-                    <a class="item" href="#">課件四</a>
-                    <div class="submenu">
-                        <a class="submenu-item">主題一</a>
-                        <a class="submenu-item">主題二</a>
-                        <a class="submenu-item">主題三</a>
-                        <a class="submenu-item">主題四</a>
-                        <a class="submenu-item">主題五</a>
-                    </div>
-                </li>
-                <li class="itembox drop-down">
-                    <a class="item" href="#">課件五</a>
-                    <div class="submenu">
-                        <a class="submenu-item">主題一</a>
-                        <a class="submenu-item">主題二</a>
-                        <a class="submenu-item">主題三</a>
-                        <a class="submenu-item">主題四</a>
-                        <a class="submenu-item">主題五</a>
-                    </div>
-                </li>
+
             </ul>
         </div>
         <div class="Right_Content">
@@ -138,6 +109,17 @@
                                 </div>
                             </a>
                         </li>
+                        <ul class="pagination">
+                            <li><a href="#">«</a></li>
+                            <li><a href="#">1</a></li>
+                            <li><a class="active" href="#">2</a></li>
+                            <li><a href="#">3</a></li>
+                            <li><a href="#">4</a></li>
+                            <li><a href="#">5</a></li>
+                            <li><a href="#">6</a></li>
+                            <li><a href="#">7</a></li>
+                            <li><a href="#">»</a></li>
+                        </ul>
                     </ul>
                 </section>
             </div>
@@ -190,6 +172,17 @@
                                 </div>
                             </a>
                         </li>
+                        <ul class="pagination">
+                            <li><a href="#">«</a></li>
+                            <li><a href="#">1</a></li>
+                            <li><a class="active" href="#">2</a></li>
+                            <li><a href="#">3</a></li>
+                            <li><a href="#">4</a></li>
+                            <li><a href="#">5</a></li>
+                            <li><a href="#">6</a></li>
+                            <li><a href="#">7</a></li>
+                            <li><a href="#">»</a></li>
+                        </ul>
                     </ul>
                 </section>
 
@@ -251,8 +244,8 @@
                             <li><a href="#">6</a></li>
                             <li><a href="#">7</a></li>
                             <li><a href="#">»</a></li>
-                          </ul>
-                          
+                        </ul>
+
                     </ul>
                 </section>
             </div>
