--- a/list.html
+++ b/list.html
@@ -8,57 +8,75 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/list.css">
-    <link rel="stylesheet" href="/js/Cultural_and_Creative.js">
+    <link rel="stylesheet" href="/js/list.js">
 </head>
 
 <body>
     <div class="Web_Header">
-        <div class="navba">
-            <p class="title">B次雲端課堂</p>
-
-            <div class="search">
-                <input id="text" class="sbox">
-                <button type="button" type="button" value="Enter" class="sbutton" onclick="showButtonEvent()"><i
-                        class="fas fa-search"></i></button>
-            </div>
-
+        <div class="search">
+            <input id="text" class="sbox">
+            <button type="button" type="button" value="Enter" class="sbutton" onclick="showButtonEvent()"><i
+                    class="fas fa-search"></i></button>
         </div>
+
     </div>
     <div class="Web_Content">
         <div class="Left_Sidebar">
-            <ul class="menu">
-                <li class="itembox drop-down">
-                    <a class="item" href="#">管理類</a>
-                    <div class="submenu">
-                        <a class="submenu-item">領導管理/危機管理</a>
-                        <a class="submenu-item">時間管理/ 高效工作/ 項目管理/ 危機管理</a>
-                        <a class="submenu-item">邏輯思維/ 思維導圖/ 目標管理/ 績效管理</a>
-                        <a class="submenu-item">溝通/ 談判/ 有效會議</a>
-                        <a class="submenu-item">轉型變革</a>
-                    </div>
+            <ul class="drop-down-menu">
+                <li><a href="#">學習直通車</a>
+                    <ul>
+                        <li><a href="#">領導管理/危機管理</a>
+                        </li>
+                        <li><a href="#">時間管理/ 高效工作/ 項目管理/ 危機管理</a>
+                        </li>
+                        <li><a href="#">邏輯思維/ 思維導圖/ 目標管理/ 績效管理</a>
+                        </li>
+                        <li><a href="#">溝通/ 談判/ 有效會議</a>
+                        </li>
+                        <li><a href="#">轉型變革</a>
+                        </li>
+                    </ul>
                 </li>
-                <li class="itembox drop-down">
-                    <a class="item" href="#">科技類</a>
-                    <div class="submenu">
-                        <a class="submenu-item">工業互聯網類</a>
-                        <a class="submenu-item">人工智能類</a>
-                        <a class="submenu-item">5G+物聯網類</a>
-                        <a class="submenu-item">大數據/雲計算類</a>
-                        <a class="submenu-item">AR/VR/MR類</a>
-                    </div>
+                <li><a href="#">雲端課程</a>
+                    <ul>
+                        <li><a href="#">領導管理/危機管理</a>
+                        </li>
+                        <li><a href="#">時間管理/ 高效工作/ 項目管理/ 危機管理</a>
+                        </li>
+                        <li><a href="#">邏輯思維/ 思維導圖/ 目標管理/ 績效管理</a>
+                        </li>
+                        <li><a href="#">溝通/ 談判/ 有效會議</a>
+                        </li>
+                        <li><a href="#">轉型變革</a>
+                        </li>
+                    </ul>
+                </li>
+                <li><a href="#">富學寶典</a>
+                    <ul>
+                        <li><a href="#">領導管理/危機管理</a>
+                        </li>
+                        <li><a href="#">時間管理/ 高效工作/ 項目管理/ 危機管理</a>
+                        </li>
+                        <li><a href="#">邏輯思維/ 思維導圖/ 目標管理/ 績效管理</a>
+                        </li>
+                        <li><a href="#">溝通/ 談判/ 有效會議</a>
+                        </li>
+                        <li><a href="#">轉型變革</a>
+                        </li>
+                    </ul>
                 </li>
 
             </ul>
         </div>
         <div class="Right_Content">
 
-            <input type="radio" id="tab1" name="tabGroup1" class="tab" checked>
+            <input type="radio" id="tab1" name="tabGroup1" class="tab1" checked>
             <label for="tab1">基礎簡介</label>
 
-            <input type="radio" id="tab2" name="tabGroup1" class="tab">
+            <input type="radio" id="tab2" name="tabGroup1" class="tab2">
             <label for="tab2">進階知識</label>
 
-            <input type="radio" id="tab3" name="tabGroup1" class="tab">
+            <input type="radio" id="tab3" name="tabGroup1" class="tab3">
             <label for="tab3">延伸學習</label>
 
             <div class="tab__content">
@@ -66,47 +84,49 @@
                     <ul class="video-list">
                         <li class="video-list__item">
                             <a href="#">
-                                <h2>Title 基礎簡介</h2>
                                 <div class="video-preview-image">
-                                    <img src="http://placehold.it/1280x720" alt="" />
-
+                                    <img src="/listpic/1-1.jfif" alt="">
                                 </div>
+                                <h2>Randy Pausch時間管理演講</h2>
+                                <h6>演講人:Randy Pausch</h6>
                             </a>
                         </li>
                         <li class="video-list__item">
                             <a href="#">
-                                <h2>Title</h2>
-                                <div class="video-preview-image">
-                                    <img src="http://placehold.it/1280x720" alt="" />
 
+                                <div class="video-preview-image">
+                                    <img src="/listpic/1-2.jfif" alt="">
                                 </div>
+                                <h2>【孫運璿先生管理講座】</h2>
+                                <h6>演講人:徐重仁董事長</h6>
                             </a>
                         </li>
                         <li class="video-list__item">
                             <a href="#">
-                                <h2>Title</h2>
                                 <div class="video-preview-image">
-                                    <img src="http://placehold.it/1280x720" alt="" />
-
+                                    <img src="/listpic/1-3.jfif" alt="">
                                 </div>
+                                <h2>看完這場演講，你會知道為什麼需要管理好自己的時間</h2>
+                                <h6>演講人:Randy Pausch的</h6>
                             </a>
                         </li>
                         <li class="video-list__item">
                             <a href="#">
-                                <h2>Title</h2>
                                 <div class="video-preview-image">
-                                    <img src="http://placehold.it/1280x720" alt="" />
-
+                                    <img src="/listpic/1-4.jfif" alt="">
                                 </div>
+                                <h2>五個步驟做好時間管理？</h2>
+                                <h6>演講人:陰森IneS</h6>
                             </a>
+
                         </li>
                         <li class="video-list__item">
                             <a href="#">
-                                <h2>Title</h2>
                                 <div class="video-preview-image">
-                                    <img src="http://placehold.it/1280x720" alt="" />
-
+                                    <img src="/listpic/1-5.jfif" alt="">
                                 </div>
+                                <h2>打造高績效的時間管理專題演講</h2>
+                                <h6>演講人:Anita Chen</h6>
                             </a>
                         </li>
                         <ul class="pagination">
@@ -259,7 +279,7 @@
         <footer class="footer">
             <div class="footertext">
                 <p>Copyright © 2020 inline Ltd. All Rights Reserved</p>
-                <p>Terms of Use/Privacy PolicyPowered by inlineVersion 7.25.1</p>
+                <p>Terms of Juan Hung PolicyPowered by inlineVersion 7.25.1</p>
             </div>
         </footer>
     </div>
