--- a/detail.html
+++ b/detail.html
@@ -11,25 +11,28 @@
 <body>
     <div class="Web_Header">
         <div class="navba">
-            <p class="title">B次雲端課堂</p>
+            <!-- <p class="title">B次雲端課堂</p>
 
             <div class="search">
                 <input id="text" class="sbox">
                 <button type="button" type="button" value="Enter" class="sbutton" onclick="showButtonEvent()"><i
                         class="fas fa-search"></i></button>
-            </div>
+            </div> -->
 
         </div>
     </div>
     <div class="big">
         <div class="up">
             <div class="play">
-                <iframe width="100%" height="543" src="https://www.youtube.com/embed/kWYVdcvDArc?list=RDBCn81_zmNa8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="100%" height="590" src="https://www.youtube.com/embed/XND8GC7SpDw?list=PLcCTPbs8iOoEz2CwEREvPUOMxfSYD0QRz" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div class="word">
                 <span>
-                    <p>這樣看來，如果仔細思考廢話，會發現其中蘊含的深遠意義。艾迪生曾經說過，愛情不會因為理智而變得淡漠，也不會因為雄心壯志而喪失殆盡。它是第二生命;
-                        它滲入靈魂，溫暖著每一條血管，跳動在每一次脈搏之中。這段話的餘韻不斷在我腦海中迴盪著。</p>
+                    <p>作者:</p>
+                    <p>上傳日期:</p>
+                    <p>影片時長:</p>
+                    <p>課程綱要:</p>
+                    <p>課程目標:</p>
                 </span>
             </div>
 
