--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <div class="cimage">
                         <div id="container"></div>
                         <div style="display:none"></div>
-                        <div style="display:none" class="ele">WELCOM</div>
+                        <div style="display:none" class="ele">WELCOME</div>
                         <div style="display:none"class="ele">B次雲端課堂</div>
                     </div>
                 </div>
