--- a/detail.html
+++ b/detail.html
@@ -11,14 +11,7 @@
 <body>
     <div class="Web_Header">
         <div class="navba">
-            <!-- <p class="title">B次雲端課堂</p>
-
-            <div class="search">
-                <input id="text" class="sbox">
-                <button type="button" type="button" value="Enter" class="sbutton" onclick="showButtonEvent()"><i
-                        class="fas fa-search"></i></button>
-            </div> -->
-
+            
         </div>
     </div>
     <div class="big">
@@ -28,10 +21,10 @@
             </div>
             <div class="word">
                 <span>
-                    <p>作者:</p>
-                    <p>上傳日期:</p>
-                    <p>影片時長:</p>
-                    <p>課程綱要:</p>
+                    <p>教師: Joeman</p>
+                    <p>上傳日期: 2019年4月20日</p>
+                    <p>影片時長: 23分48秒</p>
+                    <p>課程綱要:台灣這些年有許多知名的大胃王，其中千千是少數能在多個平台都獲得極大曝光量與迴響的佼佼者，據說千千非常少上訪談節目，所以我們也準備了很多問題跟她聊！然後另一個重點是......Joeman Show終於有置入了，感謝乾爹！</p>
                     <p>課程目標:</p>
                 </span>
             </div>
