--- a/list2.html
+++ b/list2.html
@@ -15,7 +15,7 @@
     <div class="Web_Content">
         <div class="Left_Sidebar">
             <div class="title">
-                <img src="/listpic/Management.jpg">
+                <img src="/listpic/Tech.jpg">
             </div>
             <div class="search">
                 <input id="text" class="sbox">
@@ -90,14 +90,16 @@
                                 <div class="video-preview-image">
                                     <img src="/listpic/2-1.jfif" alt="">
                                 </div>
+
                                 <div class="Words1">
-                                    <h2>科技洞悉你的感受</h2>
-                                    <h6>演講人:波碧·克文</h6>
+                                    <h2>Randy Pausch時間管理演講</h2>
+                                    <h6>演講人:Randy Pausch</h6>
                                     <h6 class="content">
-                                        當科技比我們更了解自己時，會發生什麼事情呢？波碧·克文研究人類如何表達情緒。她認為撲克臉的時代終將結束，因為科技能輕易地讀懂我們透露出來的情緒信號。在一次演講和技術展示中，波碧·克文展示了如何透過「同理心技術」
-                                        讀懂像身體溫度和呼吸中的化學成份這些生理訊息，而這些訊息能透露我們的感受。無論好壞，克文認為「如果我們能體悟同理心的力量，就能掌握科技，用科技幫助我們跨越情感和認知的鴻溝。」
+                                        2008年，Randy Pausch生前在維吉尼亞大學進行的一場演講，教導學生、老師如何善用自己時間的演講。
+                                        這場演講十分實用，並且可一窺Randy教授平常工作的態度和對待世界的不同角度。
+                                        請下載字幕來合併觀看。
                                     </h6>
-                                    <span class="watch">觀看次數:7</span>
+                                    <span class="watch">觀看次數:781</span>
                                 </div>
 
                             </a>
@@ -162,7 +164,8 @@
                                     <h2>透過藝術來呈現出科技如何建構我們的現實</h2>
                                     <h6>演講人:李家寶</h6>
                                     <h6 class="content">
-                                        科技狂熱者 Kevin Kelly 問：「科技要的是什麼？」，並發現它趨向普遍及複雜，就像生命的演化一樣。</h6>
+                                        在這場可以改變你如何看世界的演說中，設計師和藝術家李家寶介紹了她的概念性計畫，揭露出數位媒體本質上的偏見。從讓你對紅色「過敏」的頭盔，到能用意想不到的方式來過濾網路內容的瀏覽器外掛程式，李家寶的創作呈現出科技如何對我們感知現實的方式產生中介影響。
+                                    </h6>
                                     <span class="watch">觀看次數:7318</span>
                                 </div>
                             </a>
@@ -213,7 +216,8 @@
                                     <h2>透過藝術來呈現出科技如何建構我們的現實</h2>
                                     <h6>演講人:李家寶</h6>
                                     <h6 class="content">
-                                        科技狂熱者 Kevin Kelly 問：「科技要的是什麼？」，並發現它趨向普遍及複雜，就像生命的演化一樣。</h6>
+                                        在這場可以改變你如何看世界的演說中，設計師和藝術家李家寶介紹了她的概念性計畫，揭露出數位媒體本質上的偏見。從讓你對紅色「過敏」的頭盔，到能用意想不到的方式來過濾網路內容的瀏覽器外掛程式，李家寶的創作呈現出科技如何對我們感知現實的方式產生中介影響。
+                                    </h6>
                                     <span class="watch">觀看次數:7318</span>
                                 </div>
                             </a>
@@ -300,7 +304,8 @@
                                     <h2>透過藝術來呈現出科技如何建構我們的現實</h2>
                                     <h6>演講人:李家寶</h6>
                                     <h6 class="content">
-                                        科技狂熱者 Kevin Kelly 問：「科技要的是什麼？」，並發現它趨向普遍及複雜，就像生命的演化一樣。</h6>
+                                        在這場可以改變你如何看世界的演說中，設計師和藝術家李家寶介紹了她的概念性計畫，揭露出數位媒體本質上的偏見。從讓你對紅色「過敏」的頭盔，到能用意想不到的方式來過濾網路內容的瀏覽器外掛程式，李家寶的創作呈現出科技如何對我們感知現實的方式產生中介影響。
+                                    </h6>
                                     <span class="watch">觀看次數:7318</span>
                                 </div>
                             </a>
