回首頁功能

--- a/Managemaent.html
+++ b/Managemaent.html
@@ -15,7 +15,7 @@
     <div class="Web_Content">
         <div class="Left_Sidebar">
             <div class="title">
-                <img src="/listpic/Management.jpg">
+                <a href="/index.html"><img src="/listpic/Management.jpg"></a>
             </div>
             <div class="search">
                 <input id="text" class="sbox">
