--- a/Tech.html
+++ b/Tech.html
@@ -15,7 +15,7 @@
     <div class="Web_Content">
         <div class="Left_Sidebar">
             <div class="title">
-                <img src="/listpic/Tech.jpg">
+                <a href="/index.html"><img src="/listpic/Tech.jpg"></a>
             </div>
             <div class="search">
                 <input id="text" class="sbox">
