--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <div class="cimage">
                         <div id="container"></div>
                         <div style="display:none"></div>
-                        <div style="display:none" class="ele">WELCOEM to</div>
+                        <div style="display:none" class="ele">WELCOEME to</div>
                         <div style="display:none"class="ele">B次雲端課堂</div>
                     </div>
                 </div>
