--- a/detail.html
+++ b/detail.html
@@ -20,7 +20,7 @@
     <div align=center class="big">
         <div class="up">
             <div class="play">
-                <iframe width="1903" height="768" src="https://www.youtube.com/embed/JKBFwR1HIFU" frameborder="0"
+                <iframe width="80%" height="768" src="https://www.youtube.com/embed/JKBFwR1HIFU" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
             </div>
